<resources>
    <string name="app_name">eग्राम</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="developed_by">Developed by Pixel Tech Services </string>
    <string name="app_version">Version 1.0.0</string>

    <string name="generate_otp">Generate OTP </string>
    <string name="sign_in">Sign In </string>
    <string name="username_validation_msg">Please enter valid username</string>
    <string name="password_validation_msg">Please enter valid password.</string>
    <string name="remember_password">Remember Password</string>


    <!--<string name="home">होम</string>-->
    <string name="notification">सूचना</string>
    <string name="form8">नमुना ८ इंट्री</string>
    <string name="form8_register">नमुना ८ रजिस्टर</string>
    <string name="form9">नमुना ९</string>
    <string name="tax_pay">कर भरणा</string>
    <string name="export">एक्स्पोर्ट </string>
    <string name="help">मदत</string>
    <string name="contact_us">संपर्क</string>
    <string name="logout">बाहेर पडा  </string>
    <string name="sync">Sync data  </string>
    <string name="village">गाव (Village)</string>
    <string name="anukrmank">अनुक्रमांक </string>
    <string name="enter_otp">Enter OTP</string>
    <string name="lbl_anukrmank">अनुक्रमांक (Username)</string>
    <string name="lbl_mobile_num">मोबाईल क्रमांक (Mobile Number)</string>
    <string name="hint_mobile_num">मोबाईल क्रमांक</string>
    <string name="lbl_year">वर्ष : </string>

    <string name="oops_notifications">Oops,you don\'t have notifications to view</string>
    <string name="lab_new">नवीन</string>
    <string name="lbl_heading_mal_mataha_mahiti">मालमत्तेची माहिती</string>
    <string name="lbl_save">साठवणे</string>
    <string name="lbl_malmata_krmanak">मालमत्ता क्र.</string>
    <string name="lbl_home_type">घराचा प्रकार</string>
    <string name="lbl_lambi">लांबी</string>
    <string name="lbl_rundi">रुंदी</string>
    <string name="lbl_area">क्षेत्रफळ</string>
    <string name="lbl_owner_name">भोगवटदाराचे नाव</string>
    <string name="lbl_business">व्यावसायिक</string>
    <string name="lbl_year_rent">वार्षिक किंमत/ भाडे</string>
    <string name="lbl_malmata_details">मालमत्तेचे वर्णन</string>
    <string name="lbl_home_num">घर न.</string>
    <string name="lbl_sr_num">सर्वे न.</string>
    <string name="lbl_bandhkam">बांधकाम</string>
    <string name="lbl_build_year">सन</string>
    <string name="lbl_use_for">वापर</string>
    <string name="lbl_khatedar">खातेदार</string>
    <string name="lbl_name">नाव</string>
    <string name="lbl_addr">पत्ता</string>
    <string name="lb_wifename">पत्नीचे नाव</string>
    <string name="lbl_health_tax">आरोग्य कर</string>
    <string name="lbl_land_info">जमिनीची माहिती</string>
    <string name="lbl_electricity_tax">विज कर</string>
    <string name="lbl_jaminicha_dr_heactori">जमिनीचा भांडवली मूल्य दर हेक्टरी</string>
    <string name="lbl_sq_meter">चौ/मिटर</string>
    <string name="lbl_water_bill">पाणीपट्टी</string>
    <string name="lbl_concession">सूट</string>
    <string name="lbl_old_home_tax_bill">जुनी घरपट्टी</string>
    <string name="lbl_road_name">रस्त्याचे नाव</string>
    <string name="lbl_bhandwali_mulya_padath">भांडवली मूल्य पद्धत</string>
    <string name="lbl_ward_name">वार्डाचे नाव</string>
    <string name="lbl_delete">नष्ट करा</string>
    <string name="lbl_milkatdar_number">मिळकतदार नंबर</string>
    <string name="lbl_milkatdar_name">मिळकतदार नाव</string>
    <string name="lbl_search">शोधा</string>
    <string name="lbl_ghrpati">घरपट्टी</string>
    <string name="lbl_fine">दंड</string>
    <string name="lbl_total">एकूण</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="lbl_health">आरोग्य</string>


</resources>
