<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_white"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_form8"
            android:icon="@drawable/ic_file_white"
            android:title="@string/form8" />
        <item
            android:id="@+id/nav_form8_register"
            android:icon="@drawable/ic_file_white"
            android:title="@string/form8_register" />
        <item
            android:id="@+id/nav_form9"
            android:icon="@drawable/ic_file_white"
            android:title="@string/form9" />
        <item
            android:id="@+id/nav_tax"
            android:icon="@drawable/tax"
            android:title="@string/tax_pay" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync_white"
            android:title="@string/sync" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_export_white"
            android:title="@string/export" />
       <!-- <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_lock_open_white"
            android:title="@string/logout"/>-->
    </group>

    <item android:title="संवाद">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_outline_white"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_phone_white"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
