<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_malmata_mahiti"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_10dp"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_malmata_krmanak" />

        <EditText
            android:id="@+id/auto_txt_Cust_name"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_home_type" />

        <Spinner
            android:id="@+id/sp_home_type"
            style="@style/AppSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_lambi" />

        <EditText
            android:id="@+id/edt_lambi"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_rundi" />

        <EditText
            android:id="@+id/edt_rundi"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_area" />

        <EditText
            android:id="@+id/edt_area"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_addr" />

        <EditText
            android:id="@+id/edt_address"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="वार्डाचे नाव" />

        <EditText
            android:id="@+id/edt_ward_name"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_business" />

        <Spinner
            android:id="@+id/sp_business"
            style="@style/AppSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_owner_name" />

        <EditText
            android:id="@+id/edt_owner_name"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_year_rent" />

        <EditText
            android:id="@+id/edt_yearly_rent"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_malmata_details" />

        <EditText
            android:id="@+id/edt_malmata_details"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_home_num" />

        <EditText
            android:id="@+id/edt_home_num"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_sr_num" />

        <EditText
            android:id="@+id/edt_sr_num"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/anukrmank" />

        <EditText
            android:id="@+id/edt_anukrmank"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_bandhkam" />

        <EditText
            android:id="@+id/edt_bandhkam"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_build_year" />

        <EditText
            android:id="@+id/edt_build_year"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ibl_use_for" />

        <Spinner
            android:id="@+id/sp_use_for"
            style="@style/AppSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.5" />

    </LinearLayout>
    <!-- button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_20dp"
            android:padding="@dimen/margin_10dp"
            android:text="@string/lbl_save" />

        <Button
            android:id="@+id/btn_new"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_10dp"
            android:text="@string/lab_new" />
    </LinearLayout>
</LinearLayout>