<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_malmata_dharakachi_mahiti"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_10dp"
    android:orientation="vertical"
    android:padding="@dimen/margin_10dp"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_khatedar" />

        <Spinner
            android:id="@+id/sp_customer"
            style="@style/AppSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="0.5" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_name" />

        <EditText
            android:id="@+id/edt_cust_name"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lbl_addr" />

        <EditText
            android:id="@+id/edt_cust_address"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lb_wifename" />

        <EditText
            android:id="@+id/edt_wife_name"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            style="@style/Label_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/hint_mobile_num" />

        <EditText
            android:id="@+id/edt_cust_mobile_num"
            style="@style/Edit_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cust_detail_save"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_20dp"
            android:padding="@dimen/margin_10dp"
            android:text="@string/lbl_save" />

        <Button
            android:id="@+id/btn_cust_detail_new"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_10dp"
            android:text="@string/lab_new" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_property_owner_detail"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_height="wrap_content" />
</LinearLayout>